Fix HTML structure in index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<body>
+<div id="ufo-layer"></div>
+<canvas id="bg"></canvas>
+<nav class="topnav" role="navigation" aria-label="Main navigation">
 <!doctype html>
 <html lang="en">
 <head>
